compiler/test/fail/non_literal_get_global.js
// The name parameter must be a string literal.
let id = "stuff";

const { x, y } = getBuilding(id);

print(x, y);
